--- a/Test.ipynb
+++ b/Test.ipynb
@@ -19,8 +19,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "health = pd.read_csv('train.csv') \n",
-    "health.shape"
+    "health_train = pd.read_csv('train.csv') \n",
+    "health_test = pd.read_csv('test.csv')\n",
+    "health_test.shape\n",
+    "\n"
    ]
   },
   {
@@ -376,7 +378,9 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "pd.set_option('display.max_columns', None)  # or replace None with the number of columns you want to display\n",
+    "health_train.describe(include='all')\n",
+    "\n"
    ]
   },
   {
@@ -510,9 +514,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import PowerTransformer\n",
     "\n",
-    "model_lr = LinearRegression().fit(bostonHouse_X_train_scaled, bostonHouse_y_train)"
+    "# Assuming these are the attributes you want to transform using PowerTransformer\n",
+    "logNorm_attributes = ['Alcohol', 'PercentageExpenditure', 'HIV-AIDS', 'Measles', 'Under5LS']\n",
+    "\n",
+    "# Assuming all other attributes should be scaled using MinMaxScaler\n",
+    "# Make sure to exclude the target variable or any other non-present columns in test dataset\n",
+    "minmax_attributes = [col for col in health_train.columns if col not in logNorm_attributes and col != 'TARGET_LifeExpectancy']\n",
+    "\n",
+    "# Copy datasets to keep the original ones intact\n",
+    "health_train_scaled = health_train.copy()\n",
+    "health_test_scaled = health_test.copy()\n",
+    "\n",
+    "# Apply MinMaxScaler\n",
+    "minmaxscaler = MinMaxScaler().fit(health_train_scaled[minmax_attributes])\n",
+    "health_train_scaled[minmax_attributes] = minmaxscaler.transform(health_train_scaled[minmax_attributes])\n",
+    "health_test_scaled[minmax_attributes] = minmaxscaler.transform(health_test_scaled[minmax_attributes])\n",
+    "\n",
+    "# Apply PowerTransformer followed by MinMaxScaler to the log-norm attributes\n",
+    "powertransformer = PowerTransformer(method='yeo-johnson', standardize=False).fit(health_train[logNorm_attributes])\n",
+    "health_train_scaled[logNorm_attributes] = powertransformer.transform(health_train[logNorm_attributes])\n",
+    "health_test_scaled[logNorm_attributes] = powertransformer.transform(health_test[logNorm_attributes])\n",
+    "\n",
+    "# It's often good practice to scale these transformed attributes as well\n",
+    "minmaxscaler_pt = MinMaxScaler().fit(health_train_scaled[logNorm_attributes])\n",
+    "health_train_scaled[logNorm_attributes] = minmaxscaler_pt.transform(health_train_scaled[logNorm_attributes])\n",
+    "health_test_scaled[logNorm_attributes] = minmaxscaler_pt.transform(health_test_scaled[logNorm_attributes])\n",
+    "health_train_scaled.head()\n",
+    "\n"
    ]
   }
  ],
